src/components/Navigation/Toolbar/Toolbar.scss
.Toolbar{
    height: 52px;
    width: 100%;
    position:fixed;
    top:0;
    left:0;
    background-color: #ffffff;
    display: flex;
    justify-content: left;
    align-items: center;
    padding: 0 20px;
    box-sizing: border-box;
    z-index: 90;
}

.DesktopOnly{
    height: 100%;
    //margin: auto;
    display:flex;
    width: 100%;

}

.ButtonCSS{
    background-color: #003054;
    border: none;
    color: #fff;
    outline: #003054;
    font: inherit;
    padding: 10px;
    margin: 4px;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4px;
    right: 0;
    position:fixed;
}

.ButtonCSS:hover{
    cursor: pointer;
}

.ButtonMobileCSS{
    background-color: white;
    border: none;
    color: #003056;
    outline: #003054;
    font: inherit;
    padding: 8px;
    font-weight: bold;
    display: flex;
    -ms-flex-pack: center;
    -ms-flex-align: center;
    border-radius: 4px;
    border: 2px solid #003056;
    right: 0;
}



.Logo{
    height: 80%;
}

@media (max-width: 667px){
    .DesktopOnly {
        display: none;
    }

    .Logo{
        margin: auto;
    }
}
@media (min-width: 668px){
    .MobileOnly {
        display: none;
    }
}

//animation

:global(.navigation-appear){
    opacity: 0.01;
}
:global(.navigation-appear-active){
    opacity: 0.01;
    transition: all 600ms ease-in-out;
}

:global(.navigation-enter){
    opacity: 0.01;
}
:global(.navigation-enter-active) {
    opacity: 1;
    transition: all 1300ms ease-in-out;
}

:global(.navigation-exit) {
    opacity: 1;
}
:global(.navigation-exit-active) {
    opacity: 0.01;
    transition: all 600ms ease-in-out;
}

